# cross-platform-automation-tools

./: .bandit  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: installation.md  mkdocs.yml
docs/development/: contributing.md
docs/docs/: index.md
docs/docs/api/: cli.md  core.md  utils.md
docs/docs/development/: architecture.md  testing.md
docs/docs/usage/: cli.md
docs/site/: 404.html  index.html  objects.inv  sitemap.xml
docs/site/api/cli/: index.html
docs/site/api/core/: index.html
docs/site/api/utils/: index.html
docs/site/development/architecture/: index.html
docs/site/development/contributing/: index.html
docs/site/development/testing/: index.html
docs/site/installation/: index.html
docs/site/search/: search_index.json
docs/site/usage/cli/: index.html
docs/site/usage/examples/: index.html
docs/usage/: examples.md
src/nettools/: __init__.py
src/nettools/cli/: main.py
src/nettools/core/: iperf3.py  ping.py  ports.py  sysinfo.py
src/nettools/utils/: logger.py  platform_detect.py
tests/: conftest.py  test_cli.py
tests/test_core/: __init__.py  test_iperf3.py  test_ports.py  test_sysinfo.py
tests/test_utils/: __init__.py  test_platform_detect.py
